policies/constraint-block-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredRunAsNonRoot
metadata:
  name: block-root-containers
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
